# virtual-machine

./: .gitignore  CMakeLists.txt  README.md
docs/: instruction-set.md  notes.md
src/: CMakeLists.txt
src/asm/: CMakeLists.txt  asm.c  errors.c  errors.h  listing.c  listing.h  parser.y  scanner.h  scanner.l  symbolTable.c  symbolTable.h
src/common/: CMakeLists.txt  callStack.c  callStack.h  fileIo.c  fileIo.h  instrStore.c  instrStore.h  memory.c  memory.h  opcodes.c  opcodes.h  registers.c  registers.h  traps.c  traps.h  valStack.c  valStack.h  values.c  values.h  varStore.c  varStore.h
src/cpp/: CMakeLists.txt  Makefile  cpp.c  cpp.h  macro.c  nhash.c
src/include/: common.h  vMachine.h
src/test/: test_instr.c  test_mem.c  ti
src/vm/: CMakeLists.txt  doArith.c  doArith.h  doComp.c  doComp.h  doJmps.c  doJmps.h  errors.c  errors.h  runLoop.c  runLoop.h  virt.c
